updated code for main paper and referee reports

--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -2,6 +2,7 @@
 \input{preambleappendix}
 \input{output/mainstatistics}
 
+\UseRawInputEncoding
 \usepackage[stable]{footmisc}
 
 \newcommand*\leftright[2]{%
@@ -248,7 +249,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 3. The paper is extraordinarily long, in total 350 pgs.\ including appendices. There are numerous long footnotes. I never refereed anything like this paper. I spent several days on the manuscript and I still don't understand what exactly is being done.}
 
-\noindent \textit{Response.} We agree that the appendix is very long. It is very long because there is a lot of supporting empirical analyses that we need to provide to give credibility to the paper, to facilitate replication, and to avoid replacing careful description of what we have done with phrases like ``we tried everything and any change we tried did not matter.'' We hope that we are not penalized for providing all the details of a widely encompassing paper. We have tried to make the paper itself much more concrete, using a lot of your feedback. We: (i) briefly introduce the issue and illustrate it with labor income, which is the workhorse example in what remains of the paper; (ii) provide a background and data section; and (iii) and then head directly to the forecasts of the paper. We provide a recipe of the exact steps that we follow, in the hope that the reader can understand exactly what is being done. The Appendix gives essential details. We hope that readers with different interests are able to consult different sections of the appendix.
+\noindent \textit{Response.} We agree that the appendix is very long. It is so long because there is a lot of supporting empirical analyses that we need to provide to give credibility to the paper and to facilitate replication. We seek to avoid using vague descriptions of what we have done with such phrases as, ``we tried everything and any change we tried did not matter.'' We show that some changes matter, but our main message remains intact. We hope that we are not penalized for providing all the details of a widely encompassing paper. We have tried to make the paper itself much more concrete, using a lot of your feedback. We: (i) briefly introduce the issue and illustrate it with labor income, which is the workhorse example in what remains of the paper; (ii) provide a background and data section; and (iii) and then head directly to the forecasts of the paper. We provide a recipe of the exact steps that we follow, in the hope that the reader can understand exactly what is being done. The Appendix gives essential details. We hope that readers with different interests are able to consult different sections of the appendix.
 
 \noindent \textbf{Referee 3. The body of the paper is far from self-contained; it is necessary to read the many appendices (and footnotes) to understand what the authors actually do, how the various procedures perform, etc. Indeed, most of the substance is in the appendices. The body of the paper actually reads a bit like a very long introduction/summary of what the authors do and what they found.}
 
