--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -15,6 +15,8 @@
 \newcommand{\notorth}{\ensuremath{\perp\!\!\!\!\!\!\diagup\!\!\!\!\!\!\perp}}%
 \newcommand{\notindep}{\notorth}
 
+
+%\externaldocument{abc_comprehensivecba_appendix}
 \externaldocument{abc_comprehensivecba_appendix-pub}
 \externaldocument{abc_comprehensivecba_answerstoreferees}
 
@@ -343,8 +345,8 @@ Observations & \multicolumn{2}{c}{829} & \multicolumn{2}{c}{746}  \\
 \end{tabularx}
 \begin{tablenotes}
 \footnotesize
-\item Note for Panel (a): Estimates of the coefficients in Equation~\eqref{eq:linearexp} for labor income at age 30 by gender within the experimental sample. $R$ denotes the treatment indicator ($R = 0$ for control-group individuals and $R = 1$ for treatment-group individuals). $\bm{B}_{e,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{e,30}^d$ is age-30 intermediate inputs. We drop labor income observations above the 95\textsuperscript{th} percentile to avoid precision issues.\\
-\item Note for Panel (b): Estimates of the coefficients in Equation~\eqref{eq:linearnoexp} for labor income at age 30 by gender pooling the experimental treatment and control groups and the synthetic cohort at age 30. $K$ denotes membership to the experimental or non-experimental sample ($K = 0$ synthetic cohort in the non-experimental sample and $K = 1$ experimental sample). $\bm{B}_{k,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{k,30}^d$ is age-30 intermediate inputs.
+\item Note for Panel (a) and (b): Estimates of the coefficients in Equation~\eqref{eq:linearexp} for labor income at age 30 by gender within the experimental sample. $R$ denotes the treatment indicator ($R = 0$ for control-group individuals and $R = 1$ for treatment-group individuals). $\bm{B}_{e,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{e,30}^d$ is age-30 intermediate inputs. We drop labor income observations above the 95\textsuperscript{th} percentile to avoid precision issues.\\
+\item Note for Panel (c) and (d): Estimates of the coefficients in Equation~\eqref{eq:linearnoexp} for labor income at age 30 by gender pooling the experimental treatment and control groups and the synthetic cohort at age 30. $K$ denotes membership to the experimental or non-experimental sample ($K = 0$ synthetic cohort in the non-experimental sample and $K = 1$ experimental sample). $\bm{B}_{k,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{k,30}^d$ is age-30 intermediate inputs.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -394,7 +396,7 @@ Note for Panel (b): Tests for equality in distributions of residuals across the 
 \end{threeparttable}
 \end{table}
 
-\textbf{Steps 5. Accounting for Estimation Error, Forecast Error, and Plausible Ranges of Externally Supplied Parameters.}  Appendix~\ref{appendix:gmm} formalizes our estimation and data combination procedure using a GMM framework.\footnote{As both a referee and various discussants of our paper have pointed out, our identification and estimation strategies do not impose cross-sectional restrictions. We use different datasets to identify and estimate the  $\bm{\phi}_{a} \left( \bm{x}, \bm{b} \right)$ for each outcome (e.g., labor income, health, crime). Thus, the predictor variables that we are able to use differ across outcomes and we cannot conduct joint estimations.} We obtain standard errors from the empirical bootstrap distribution. Our inference accounts for each step of our estimation procedure, as well as forecast error. We conduct sensitivity analyses for externally supplied parameters. A step-by-step recipe for accounting for parameter uncertainty is presented in Appendix~\ref{appendix:bootstrap}. The forecasted present value of the gain induced by treatment using the estimates displayed in Figure~\ref{fig:labor-income-profiles} is \$636,674 (s.e.\ \$183,224) in 2014 USD. We explore the estimates from alternative forecasting models in Appendix~\ref{appendix:predsensitivity}. When pooling males and females and when separating the samples by gender, the present value gains remain within a range that does not change our inference that the program had substantial lifetime benefits.
+\textbf{Steps 5. Accounting for Estimation Error, Forecast Error, and Plausible Ranges of Externally Supplied Parameters.} We obtain standard errors from the empirical bootstrap distribution. Our inference accounts for each step of our estimation procedure, as well as forecast error. We conduct sensitivity analyses for externally supplied parameters. A step-by-step recipe for accounting for parameter uncertainty is presented in Appendix~\ref{appendix:bootstrap}. The forecasted present value of the gain induced by treatment using the estimates displayed in Figure~\ref{fig:labor-income-profiles} is \$636,674 (s.e.\ \$183,224) in 2014 USD. We explore the estimates from alternative forecasting models in Appendix~\ref{appendix:predsensitivity}.\footnote{As both a referee and various discussants of our paper have pointed out, our identification and estimation strategies do not impose cross-sectional restrictions. We use different datasets to identify and estimate the  $\bm{\phi}_{a} \left( \bm{x}, \bm{b} \right)$ for each outcome (e.g., labor income, health, crime). Thus, the predictor variables that we are able to use differ across outcomes and we cannot conduct joint estimations.} When pooling males and females and when separating the samples by gender, the present value gains remain within a range that does not change our inference that the program had substantial lifetime benefits.
 
 \textbf{Step 6. Validating Forecasts.} Invariance across treatment regimes and samples is the essential ingredient for constructing valid forecasts. Figure~\ref{fig:labor-income-profiles} displays our forecasted labor income profiles. Forecasted and actual labor income are closely aligned in both the treatment and the control regimes.\footnote{The content in Figure~\ref{fig:labor-income-profiles} is sufficient but not necessary to calculate the gain of the program due to labor income. It would be sufficient to forecast the difference between the treatment and control groups. Forecasting the levels, however, provides us with additional testable implications. It also allows us to easily account for forecasting error and to verify that the life-cycle profiles that we estimate are comparable to observed profiles for similar socio-economic groups. The pattern of life-cycle labor income we generate is typical for that of low-skilled workers \citep{Blundell-etal_2015_J-Pub-E,Gladden_Taber_2000_WageProgression,Sanders-Taber_2012_AR,Lagakos_Moll_etal_2016_LifeCycle_NBER}.} Computing the net present value, the internal rate of return and benefit/cost ratios is straightforward once age-by-age forecasts are available.\footnote{Some practical details involved in doing this are in Appendices~\ref{app:method_irr} and \ref{app:method_cbratio}.}
 
@@ -419,7 +421,7 @@ Note: Panel (a) displays the forecast life-cycle labor income profiles for ABC/C
 
 \noindent An alternative non-parametric forecasting method compresses the whole forecasting procedure. Under Assumptions~\ref{ass:summary} and~\ref{ass:exog}, we can use matching on baseline variables and \emph{variables affected by treatment} to construct counterparts to the experimental treatment and control groups in the non-experimental sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} discuss this procedure.} Matching is a non-parametric estimation procedure for conditional mean functions. Matching creates direct counterparts in the auxiliary sample for \textit{each member} of the experimental sample. Instead of estimating a model for the life-cycle profile of labor income and forecasting from it, we directly use the counterpart matched profiles.\footnote{See Appendix~\ref{appendix:nonpar} for details.} This is an intuitively appealing non-parametric estimator of life-cycle program treatment effects that is valid under exogeneity \citep{Heckman_Navarro_2004_REStat}.
 
-This is a fundamentally different matching procedure than what is used to construct the synthetic cohort in \textbf{Step 1}. In the main analysis of this paper, we match on baseline variables not affected by treatment to construct a synthetic cohort with $\bm{B} \in \mathcal{B}_0$. Using these samples, we estimate production functions on this cohort to forecast out-of-sample treatment effects. In the analysis off this subsection, we match both on baseline variables and on variables affected by treatment compressing the construction of the synthetic cohort and the estimation of the production functions for out-of-sample forecasts to a single, non-parametric procedure.
+This is a fundamentally different matching procedure than what is used to construct the synthetic cohort in \textbf{Step 1}. In the main analysis of this paper, we match on baseline variables not affected by treatment to construct a synthetic cohort with $\bm{B} \in \mathcal{B}_0$. Using these samples, we estimate production functions on this cohort to forecast out-of-sample treatment effects. In contrast, in the analysis of this subsection, we match both on baseline variables and on variables affected by treatment compressing the construction of the synthetic cohort and the estimation of the production functions for out-of-sample forecasts to a single, non-parametric procedure.
 
 Table~\ref{table:predsens} shows that there is close agreement between non-parametric estimates based on matching and the more parametric model-based approach previously presented. This reassuring concordance is consistent with exogeneity of inputs and structural invariance.
 
@@ -538,7 +540,7 @@ Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensiti
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Examining the Validity of Recent Ad Hoc Methods for Forecasting in Light of the Analysis of This Paper}
+\caption{Examining the Validity of Recent \emph{Ad Hoc} Methods for Forecasting in Light of the Analysis of This Paper}
 \label{table:comparing}
 \centering
 \footnotesize
@@ -577,11 +579,11 @@ Our methodology provides a more accurate estimate of the benefits and costs of t
 
 \noindent This paper presents a template for constructing economically interpretable summaries of the multiple treatment effects generated from a randomized evaluation of a high-quality, widely emulated early childhood program with follow-up through the mid 30s. We go beyond the usual practice of reporting batteries of treatment effects. We report the costs and monetize the treatments across numerous domains. We estimate the tax-adjusted internal rate of return and the benefit/cost ratio of the program. These aggregates assess the social efficiency of the program.
 
-We use auxiliary information and economic models to guide monetization of treatment effects and to extrapolate these benefits to the full life cycles of participants. We account for model estimation and forecast error and conduct extensive sensitivity analyses of our estimates to alternative assumptions and methodologies. Under a variety of plausible assumptions, we estimate that the tax-adjusted internal rate of return of the program ranges from 1.5 to 17.4. These estimates demonstrate the social profitability of ABC/CARE.
+We use auxiliary information and economic models to guide monetization of treatment effects and to extrapolate the measured benefits and costs to the full life cycles of participants. We account for model estimation and forecast error and conduct extensive sensitivity analyses of our estimates to alternative assumptions and methodologies. Under a variety of plausible assumptions, we estimate that the tax-adjusted internal rate of return of the program ranges from 1.5\% to 17.4\%. These estimates demonstrate the social profitability of ABC/CARE.
 
 We conclude with a cautionary note. The program we study was targeted to a disadvantaged, predominately African-American population in a university town in North Carolina. Blind generalization of our findings to other populations is clearly not warranted. In particular, there is no support in this study for universal application of ABC/CARE across all socio-economic groups.
 
-However, the essential features of the ABC/CARE approach are currently in wide use in a variety of early childhood intervention programs that target disadvantaged children. Our analysis has lessons of general applicability to disadvantaged populations resembling those targeted by ABC/CARE. Our study indicates what is possible. The possibilities are substantial.
+However, the essential features of the ABC/CARE approach are currently in wide use in a variety of early childhood intervention programs that target disadvantaged children. In this sense, our analysis has lessons of general applicability to disadvantaged populations resembling those targeted by ABC/CARE. Our study indicates what is possible and the possibilities are substantial.
 
 %References
 \singlespace
