pusing updated appendix

--- a/Appendices/Health.tex
+++ b/Appendices/Health.tex
@@ -1,6 +1,6 @@
 \section{Health Outcomes in the Future Adult Model (FAM)} \label{appendix:health}
 
-This appendix, we explain our methodology to measure the projected differences in health outcomes and medical expenditure over the adult life for the treated and control groups in ABC/CARE.
+This appendix explains our methodology for measuring the projected differences in health outcomes and medical expenditure over the adult life for the treated and control groups in ABC/CARE.
 Health outcomes and behaviors of ABC/CARE subjects are measured at the age-30 interview and in a health follow-up conducted when the subjects were in their mid-30s.
 To project the life-cycle path of health outcomes and medical expenditures, we use a dynamic microsimulation model (the Future Adult Model - FAM)to track the treatment and control cohorts from age 30 until death.
 
