paper and responses

--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -1,8 +1,6 @@
 %Input preamble
 \input{preambleappendix}
 \input{output/mainstatistics}
-
-\UseRawInputEncoding
 \usepackage[stable]{footmisc}
 
 \newcommand*\leftright[2]{%
@@ -84,7 +82,7 @@ University of Southern California}
 \noindent \textbf{This needs to be a lot clearer and a lot more convincing. You may be resolving this eventually in (3). It is unclear there, however, whether you want all the characteristics of the synthetic group to be the same or just for the one specific j, which you are seeking to forecast in (1). To me, it makes more sense that they are all the
 same (if possible: is it? Comment on that!).}
 
-\noindent \textit{Response.} We now thoroughly discuss this point in Section~\ref{section:cbamethodology}, where we detail the construction of our synthetic cohorts. As you point out, it makes more sense to construct one synthetic cohort for doing the analysis across all of the outcomes. That is what we do. We regret the confusion.
+\noindent \textit{Response.} We now thoroughly discuss this point in Section~\ref{section:cbamethodology}, where we detail the construction of our synthetic cohorts. As you point out, it makes more sense to construct one synthetic cohort for doing the analysis across all of the outcomes. That is what we do. We regret the confusion in our exposition.
 
 \noindent \textbf{Editor. Connected to that: I found assumption Assumption~\ref{ass:summary} on pg.\ 18 mystifying. It may actually be unfortunate that you ``suppress individual i subscripts'' to ``avoid notational clutter'', as you state on p. 16. I thought that the explanation on pg.\ 15 and (3) meant, that you take each individual of your actual sample and ``match him/her'' up with someone in the auxiliary sample, who has the exact same vector of characteristics Y until age a* (which then raises a bunch of questions: what, if there are many in the artificial data that do the trick? What, if there are none?). So, you then would have an auxiliary sample, that looks like your experimental sample, but where you can observe everything until the end of their lives. If that is what you do, then \ref{ass:summary} is not an assumption: it is a definition of the auxiliary sample.}
 
@@ -249,7 +247,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 3. The paper is extraordinarily long, in total 350 pgs.\ including appendices. There are numerous long footnotes. I never refereed anything like this paper. I spent several days on the manuscript and I still don't understand what exactly is being done.}
 
-\noindent \textit{Response.} We agree that the appendix is very long. It is so long because there is a lot of supporting empirical analyses that we need to provide to give credibility to the paper and to facilitate replication. We seek to avoid using vague descriptions of what we have done with such phrases as, ``we tried everything and any change we tried did not matter.'' We show that some changes matter, but our main message remains intact. We hope that we are not penalized for providing all the details of a widely encompassing paper. We have tried to make the paper itself much more concrete, using a lot of your feedback. We: (i) briefly introduce the issue and illustrate it with labor income, which is the workhorse example in what remains of the paper; (ii) provide a background and data section; and (iii) and then head directly to the forecasts of the paper. We provide a recipe of the exact steps that we follow, in the hope that the reader can understand exactly what is being done. The Appendix gives essential details. We hope that readers with different interests are able to consult different sections of the appendix.
+\noindent \textit{Response.} We agree that the appendix is very long. It is so long because there is a lot of supporting empirical analyses that we need to provide to give credibility to the paper and to facilitate replication. We seek to avoid using vague descriptions of what we have done with phrases such like, ``we tried everything and any change we tried did not matter.'' We show that some changes matter, but our main message remains intact. We hope that we are not penalized for providing all the details of a widely encompassing paper. We have tried to make the paper itself much more concrete, using a lot of your feedback. We: (i) briefly introduce the issue and illustrate it with labor income, which is the workhorse example in what remains of the paper; (ii) provide a background and data section; and (iii) and then head directly to the forecasts of the paper. We provide a recipe of the exact steps that we follow, in the hope that the reader can understand exactly what is being done. The Appendix gives essential details. We hope that readers with different interests are able to consult different sections of the appendix.
 
 \noindent \textbf{Referee 3. The body of the paper is far from self-contained; it is necessary to read the many appendices (and footnotes) to understand what the authors actually do, how the various procedures perform, etc. Indeed, most of the substance is in the appendices. The body of the paper actually reads a bit like a very long introduction/summary of what the authors do and what they found.}
 
