--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -583,7 +583,7 @@ We use auxiliary information and economic models to guide monetization of treatm
 
 We conclude with a cautionary note. The program we study was targeted to a disadvantaged, predominately African-American population in a university town in North Carolina. Blind generalization of our findings to other populations is clearly not warranted. In particular, there is no support in this study for universal application of ABC/CARE across all socio-economic groups.
 
-However, the essential features of the ABC/CARE approach are currently in wide use in a variety of early childhood intervention programs that target disadvantaged children. In this sense, our analysis has lessons of general applicability to disadvantaged populations resembling those targeted by ABC/CARE. Our study indicates what is possible and the possibilities are substantial.
+However, the essential features of the ABC/CARE approach are currently in wide use in a variety of early childhood intervention programs that target disadvantaged children. In this sense, our analysis has lessons of general applicability to disadvantaged populations resembling those targeted by ABC/CARE and the many programs influenced by it. Our study indicates what is possible and the possibilities are substantial.
 
 %References
 \singlespace
